Release 0.9.0 with Stardew compatibility